--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="col-sm-6 col-md-8">
         <div class="chart-wrapper">
           <div class="chart-title">
-            This month
+           KWHR USAGE
           </div>
           <div class="chart-stage">
             <div id="mychart">
@@ -33,7 +33,7 @@
             </div>
           </div>
           <div class="chart-notes">
-            kwhr
+            TODAY
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
      <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            Total this year
+            KWHR USAGE
           </div>
           <div class="chart-stage">
             <div id="mychartt">
@@ -49,7 +49,7 @@
             </div>
           </div>
           <div class="chart-notes">
-            kwhr
+            THIS MONTH
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
             <div class="col-sm-6 col-md-8" id="mapwrap">
         <div class="chart-wrapper">
           <div class="chart-title">
-             Cell Title
+             AVERAGE KWHR USAGE PER CAPITA
             </div>
           <div class="chart-stage">
              <div id="map" style="width: 1200px; height: 250px;">
@@ -67,7 +67,7 @@
           </div>
           </div>
           <div class="chart-notes">
-             Notes about this chart
+             MONTHLY
           </div>
         </div>
       </div>
@@ -75,7 +75,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            This month
+            DAILY KWHR USAGE
           </div>
           <div class="chart-stage">
             <div id="mycharttt">
@@ -83,7 +83,7 @@
             </div>
           </div>
           <div class="chart-notes">
-            kwhr
+            LAST 60 DAYS
           </div>
         </div>
       </div>
