--- a/index.html
+++ b/index.html
@@ -92,7 +92,21 @@
 
 </div>
 
-
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            DAILY KWHR USAGE
+          </div>
+          <div class="chart-stage">
+            <div id="mycharttt">
+            
+            </div>
+          </div>
+          <div class="chart-notes">
+            LAST 1 DAYS
+          </div>
+        </div>
+      </div>
 
 
     <hr>
