--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "1340",
-                    "marker-symbol": ""
+                    "marker-symbol": "star"
                 }
             }, {
                 "type": "Feature",
@@ -265,7 +265,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "900",
-                    "marker-symbol": ""
+                    "marker-symbol": "star"
                 }
             }]
         }
