--- a/index.html
+++ b/index.html
@@ -105,6 +105,22 @@
         </div>
       </div>
 
+      <div class="col-sm-6 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            HOURLY KWHR USAGE
+          </div>
+          <div class="chart-stage">
+            <div id="state">
+            
+            </div>
+          </div>
+          <div class="chart-notes">
+            LAST 1 DAYS
+          </div>
+        </div>
+      </div>
+      
 </div>
 
     <hr>
