--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            HOURLY KWHR USAGE
+            State
           </div>
           <div class="chart-stage">
             <div id="state">
