--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Keen.ready(function(){
     timezone: "UTC"
   });
   
-  var state = new Keen.Query("count-unique", {
+  var state = new Keen.Query("count_unique", {
     eventCollection: "collect",
     filters: [
     {
