--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ Keen.ready(function(){
     {
         "operator": "eq",
         "property_name": "coreid",
-        "property_value": "51ff67065067545711360687"
+        "property_value": "51ff67065067545711360687",
+        "target_property": "event"
     }
 ],
     timeframe: "this_1_days",
