--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ Keen.ready(function(){
         "operator": "eq",
         "property_name": "coreid",
         "property_value": "51ff67065067545711360687",
-        "target_property": "event"
+        "targetProperty": "event"
     }
 ],
     timeframe: "this_1_days",
