--- a/index.html
+++ b/index.html
@@ -198,12 +198,13 @@ Keen.ready(function(){
   
   var state = new Keen.Query("count_unique", {
     eventCollection: "collect",
+    targetPrperty: "event",
     filters: [
     {
         "operator": "eq",
         "property_name": "coreid",
-        "property_value": "51ff67065067545711360687",
-        "targetProperty": "event"
+        "property_value": "51ff67065067545711360687"
+        
     }
 ],
     timeframe: "this_1_days",
