--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Keen.ready(function(){
   
   var state = new Keen.Query("count_unique", {
     eventCollection: "collect",
-    targetPrperty: "event",
+    targetProperty: "event",
     filters: [
     {
         "operator": "eq",
