--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "1340",
-                    "marker-symbol": "bolt"
+                    "marker-symbol": "1"
                 }
             }, {
                 "type": "Feature",
