--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@ map.on('load', function () {
                     "coordinates": [-106.3468, 55.1304]
                 },
                 "properties": {
-                    "title": "900",
-                    "marker-symbol": "star"
+                    "title": "900"
+                   
                 }
             }]
         }
