--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@ map.on('load', function () {
                     "coordinates": [-106.3468, 55.1304]
                 },
                 "properties": {
-                    "title": "900"
+                    "title": "900",
+                    "marker-symbol": "marker"
                    
                 }
             }]
