--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "900",
-                    "marker-symbol": "marker.big"
+                    "marker-symbol": "marker"
                    
                 }
             }]
