--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Keen.ready(function(){
         "property_value": "51ff67065067545711360687"
     }
 ],
-    interval: "daily",
+    interval: "hourly",
     timeframe: "this_7_days",
     timezone: "UTC"
   });
