--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "900",
-                    "marker-symbol": "marker"
+                    "marker-symbol": "rocket"
                    
                 }
             }]
