--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Keen.ready(function(){
   });
   
   var state = new Keen.Query("count_unique", {
-    eventCollection: "kWhr",
+    eventCollection: "collect",
     targetProperty: "event",
     filters: [
     {
