--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
         </div>
       </div>
       
-</div>
-
+       <div class="row">
             <div class="col-sm-12 col-md-12" id="mapwrap">
         <div class="chart-wrapper">
           <div class="chart-title">
