--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ Keen.ready(function(){
         }
       });
       
-           client.draw(query, document.getElementById("mychartt"), {
+           client.draw(queryy, document.getElementById("mychartt"), {
         chartType: "metric",
         title: false,
         height: 250,
