--- a/index.html
+++ b/index.html
@@ -163,7 +163,20 @@ Keen.ready(function(){
     timezone: "UTC"
   });
   
-    var month = new Keen.Query("count", {
+  var month = new Keen.Query("count", {
+    eventCollection: "kWhr",
+    filters: [
+    {
+        "operator": "eq",
+        "property_name": "coreid",
+        "property_value": "51ff67065067545711360687"
+    }
+],
+    timeframe: "this_30_days",
+    timezone: "UTC"
+  });
+  
+    var monthchart = new Keen.Query("count", {
     eventCollection: "kWhr",
 
     interval:"daily",
@@ -227,7 +240,7 @@ Keen.ready(function(){
         }
       });
       
-client.draw(queryy, document.getElementById("mycharttt"), {
+client.draw(monthchart, document.getElementById("mycharttt"), {
   chartType: "columnchart",
   title: false,
   height: 250,
