--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
   client.draw(state, document.getElementById("state"), {
         chartType: "metric",
         title: false,
-        height: 250,
+        height: "auto",
         width: "auto",
           chartOptions: {
             chartOptions: {
