--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@ client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
   
   client.draw(state, document.getElementById("state"), {
         chartType: "metric",
-        title: false,
-        height: "auto",
+        title: true,
+        height: 250,
         width: "auto",
           chartOptions: {
             chartOptions: {
