--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
   
   client.draw(state, document.getElementById("state"), {
         chartType: "metric",
-        
+       title: "state", 
         height: 250,
         width: "auto",
           chartOptions: {
