--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            HOURLY KWHR USAGE
+            LEADERBOARD
           </div>
           <div class="chart-stage">
             <div id="hourlykwhr">
@@ -117,7 +117,7 @@
             </div>
           </div>
           <div class="chart-notes">
-            LAST 1 DAYS
+            LAST 30 DAYS
           </div>
         </div>
       </div>
