--- a/index.html
+++ b/index.html
@@ -292,7 +292,19 @@ client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
   }
   });
   
-
+client.draw(leader, document.getElementById("leader"), {
+  chartType: "barchart",
+  title: "daily",
+  height: 250,
+  width: "auto",
+  chartOptions: {
+     chartOptions: {
+      isStacked: true
+          }
+  }
+  });
+  
+  
   client.draw(state, document.getElementById("state"), {
         chartType: "metric",
        title: "state", 
