--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
   
 client.draw(leader, document.getElementById("leader"), {
   chartType: "barchart",
-  title: "daily",
+  title: "last 30 days",
   height: 250,
   width: "auto",
   chartOptions: {
