--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="col-sm-4 col-md-4">
         <div class="chart-wrapper">
           <div class="chart-title">
-            State
+            STATE
           </div>
           <div class="chart-stage">
             <div id="state">
