--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Keen.ready(function(){
       
 client.draw(monthchart, document.getElementById("mycharttt"), {
   chartType: "columnchart",
-  title: "monthly",
+  title: "daily",
   height: 250,
   width: "auto",
   chartOptions: {
