--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         </div>
       </div>
    
-
-      <div class="col-sm-4 col-md-4">
+<div class="row">
+      <div class="col-sm-12 col-md-12">
         <div class="chart-wrapper">
           <div class="chart-title">
             STATE
@@ -70,6 +70,7 @@
           </div>
         </div>
       </div>
+       </div>
        </div>
        
     <div class="row">
