--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
       </div>
    
-<div class="row">
+    <div class="row">
       <div class="col-sm-4 col-md-11">
         <div class="chart-wrapper">
           <div class="chart-title">
@@ -66,12 +66,12 @@
             </div>
           </div>
           <div class="chart-notes">
-          
+          STATE
           </div>
         </div>
       </div>
-       </div>
-       </div>
+    </div>
+  </div>
        
     <div class="row">
       <div class="col-sm-6 col-md-4">
