--- a/index.html
+++ b/index.html
@@ -53,9 +53,27 @@
           </div>
         </div>
       </div>
+  
+  
+     <div class="col-sm-4 col-md-4">
+        <div class="chart-wrapper">
+          <div class="chart-title">
+            CYCLE
+          </div>
+          <div class="chart-stage">
+            <div id="cycle">
+            
+            </div>
+          </div>
+          <div class="chart-notes">
+            
+          </div>
+        </div>
+      </div>
    
+  
     <div class="row">
-      <div class="col-sm-11 col-md-11">
+      <div class="col-sm-12 col-md-12">
         <div class="chart-wrapper">
           <div class="chart-title">
            STATE
