--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ Keen.ready(function(){
     timezone: "America/Sao_Paulo"
   });
   
-  var state = new Keen.Query("count_unique", {
+  var cycle = new Keen.Query("count_unique", {
     eventCollection: "collect",
     targetProperty: "event",
     filters: [
@@ -258,7 +258,7 @@ Keen.ready(function(){
 ],
     interval: "minutely",
     timeframe: "this_1_hours",
-    timezone: "UTC"
+    timezone: "America/Sao_Paulo"
   });
   
   var cycle = new Keen.Query("count", {
@@ -271,7 +271,7 @@ Keen.ready(function(){
     }
 ],
     timeframe: "this_1_days",
-    timezone: "UTC"
+    timezone: "America/Sao_Paulo"
   });
   
     var leader = new Keen.Query("count", {
@@ -309,7 +309,7 @@ Keen.ready(function(){
         }
       });
       
-      client.draw(state, document.getElementById("state"), {
+      client.draw(cycle, document.getElementById("cycle"), {
         chartType: "metric",
         title: "today",
         height: 250,
