--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
   
       <div class="row">
         <div class="col-sm-12 col-md-12">
+          <div>
           <div class="chart-wrapper">
           <div class="chart-title">
            STATE
