--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@ client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
 client.draw(leader, document.getElementById("leader"), {
   chartType: "barchart",
   title: "last 30 days",
-  height: 250,
+  height: "auto",
   width: "auto",
   chartOptions: {
      chartOptions: {
