--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ Keen.ready(function(){
      client.draw(today, document.getElementById("mychart"), {
         chartType: "metric",
         title: "today",
-        height: 250,
+        height: "auto",
         width: "auto",
         chartOptions: {
           chartOptions: {
@@ -305,7 +305,7 @@ Keen.ready(function(){
       client.draw(month, document.getElementById("mychartt"), {
         chartType: "metric",
         title: "this month",
-        height: 250,
+        height: "auto",
         width: "auto",
           chartOptions: {
             chartOptions: {
@@ -317,7 +317,7 @@ Keen.ready(function(){
       client.draw(cycle, document.getElementById("cycle"), {
         chartType: "metric",
         title: "today",
-        height: 250,
+        height: "auto",
         width: "auto",
           chartOptions: {
             chartOptions: {
@@ -328,7 +328,7 @@ Keen.ready(function(){
       client.draw(monthchart, document.getElementById("mycharttt"), {
         chartType: "columnchart",
         title: "daily",
-        height: 250,
+        height: "auto",
         width: "auto",
           chartOptions: {
             chartOptions: {
@@ -340,7 +340,7 @@ Keen.ready(function(){
 client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
   chartType: "columnchart",
   title: "hourly",
-  height: 250,
+  height: "auto",
   width: "auto",
   chartOptions: {
      chartOptions: {
@@ -365,7 +365,7 @@ client.draw(leader, document.getElementById("leader"), {
   client.draw(state, document.getElementById("state"), {
         chartType: "columnchart",
        title: "state", 
-        height: 250,
+        height: "auto",
         width: "auto",
           chartOptions: {
             chartOptions: {
