--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ Keen.ready(function(){
         width: "auto",
         chartOptions: {
           chartOptions: {
-            isStacked: true
+            isStacked: false
           }
         }
       });
