--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       
 
           <div class="row">
-            <div class="col-sm-12 col-md-12">
+            <div class="col-xs-12 col-md-12">
               <div class="chart-wrapper">
               <div class="chart-title">
                STATE
@@ -140,7 +140,7 @@
       </div>
       
        <div class="row">
-            <div class="col-sm-2 col-md-12" id="mapwrap">
+            <div class="col-xs-12 col-md-12" id="mapwrap">
         <div class="chart-wrapper">
           <div class="chart-title">
              AVERAGE KWHR USAGE PER CAPITA
@@ -297,7 +297,7 @@ Keen.ready(function(){
         width: "auto",
         chartOptions: {
           chartOptions: {
-            isStacked: false
+            isStacked: true
           }
         }
       });
