--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       
 
           <div class="row">
-            <div class="col-xs-12 col-md-12">
+            <div class="col-md-12 col-md-12">
               <div class="chart-wrapper">
               <div class="chart-title">
                STATE
