--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </div>
       
-       <div class="row">
+
             <div class="col-xs-12 col-md-12" id="mapwrap">
         <div class="chart-wrapper">
           <div class="chart-title">
@@ -288,7 +288,7 @@ Keen.ready(function(){
      client.draw(today, document.getElementById("mychart"), {
         chartType: "metric",
         title: "today",
-        height: "auto",
+        height: "250",
         width: "auto",
         chartOptions: {
           chartOptions: {
@@ -300,7 +300,7 @@ Keen.ready(function(){
       client.draw(month, document.getElementById("mychartt"), {
         chartType: "metric",
         title: "this month",
-        height: "auto",
+        height: "250",
         width: "auto",
           chartOptions: {
             chartOptions: {
@@ -312,7 +312,7 @@ Keen.ready(function(){
       client.draw(cycle, document.getElementById("cycle"), {
         chartType: "metric",
         title: "today",
-        height: "auto",
+        height: "250",
         width: "auto",
           chartOptions: {
             chartOptions: {
@@ -323,7 +323,7 @@ Keen.ready(function(){
       client.draw(monthchart, document.getElementById("mycharttt"), {
         chartType: "columnchart",
         title: "daily",
-        height: "auto",
+        height: "250",
         width: "auto",
           chartOptions: {
             chartOptions: {
@@ -335,7 +335,7 @@ Keen.ready(function(){
 client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
   chartType: "columnchart",
   title: "hourly",
-  height: "auto",
+  height: "250",
   width: "auto",
   chartOptions: {
      chartOptions: {
@@ -347,7 +347,7 @@ client.draw(queryhourlykwhr, document.getElementById("hourlykwhr"), {
 client.draw(leader, document.getElementById("leader"), {
   chartType: "barchart",
   title: "last 30 days",
-  height: "auto",
+  height: "250",
   width: "auto",
   chartOptions: {
      chartOptions: {
@@ -360,7 +360,7 @@ client.draw(leader, document.getElementById("leader"), {
   client.draw(state, document.getElementById("state"), {
         chartType: "columnchart",
        title: "state", 
-        height: "auto",
+        height: "250",
         width: "auto",
           chartOptions: {
             chartOptions: {
