--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="chart-notes">
-            
+            TODAY
           </div>
         </div>
       </div>
