--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Keen.ready(function(){
   });
   
     var leader = new Keen.Query("count", {
-    eventCollection: "sensee",
+    eventCollection: "kWhr",
     filters: [
     {
         "operator": "eq",
