--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 
 </head>
-    
+<body>
+  <img src="/dashboards/s3.png" alt="sensee" style="">
+  
   <div class="container-fluid">
     <div class="row">
       <div class="col-sm-4 col-md-4">
