--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-  <img src="/dashboards/s3.png" alt="sensee" style="">
+  <img src="s3.png" alt="sensee" style="">
   
   <div class="container-fluid">
     <div class="row">
