--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Keen.ready(function(){
   });
   
     var leader = new Keen.Query("count", {
-    eventCollection: "kWhr",
+    eventCollection: "sensee",
     filters: [
     {
         "operator": "eq",
