--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
           <div class="chart-stage">
             <div id="leader">
-            
+            YOUR DATA
             </div>
           </div>
           <div class="chart-notes">
