--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                STATE
               </div>
               <div class="chart-stage">
-                <div id="state">
+                <div id="kWhr">
                 
                 </div>
               </div>
@@ -357,7 +357,7 @@ client.draw(leader, document.getElementById("leader"), {
   
   client.draw(state, document.getElementById("state"), {
         chartType: "columnchart",
-       title: "state", 
+       title: "kWhr", 
         height: "250",
         width: "auto",
           chartOptions: {
