--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                STATE
               </div>
               <div class="chart-stage">
-                <div id="kWhr">
+                <div id="state">
                 
                 </div>
               </div>
