--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="col-md-12 col-md-12">
               <div class="chart-wrapper">
               <div class="chart-title">
-               STATE
+               kWhr
               </div>
               <div class="chart-stage">
                 <div id="state">
