--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ client.draw(leader, document.getElementById("leader"), {
     
 </script>
 
-<div id='map'></div>
+<div id='map#'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
