--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
              AVERAGE KWHR USAGE PER CAPITA
             </div>
           <div class="chart-stage">
-             <div id="map#" style="width: 1300px; height: 300px;">
+             <div id="map" style="width: 1300px; height: 300px;">
                
           </div>
           </div>
@@ -370,7 +370,7 @@ client.draw(leader, document.getElementById("leader"), {
     
 </script>
 
-<div id='map#'></div>
+<div id='map'></div>
 
 <script>
 mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
